@@ -16,12 +16,13 @@ Ver.4.4 (in development)
 - Update sample_schema_mysql.txt to merge schema_data.txt of Sample_Extensible Sample.
 - Avoid outputting error messages in an error log file when not specifying the 'context' key of the 'file-upload' 
   key in a definition file.
-- Update the Local Content to improve compatibility with INTERMediator.pagedSize and update the "Practices" sample.
+- Update the Local Content to improve compatibility with INTERMediator.pagedSize and update the "Practices".
 - INTERMediatorOnPage.additionalExpandingEnclosureFinish and INTERMediatorOnPage.additionalExpandingRecordFinish
   are supported. These are programmable interfaces associated with 'post-enclosure' and 'post-repeater' in a context.
 - DataConverter_MySQLDateTime class supports 'YYYY.MM.DD' date format.
 - Use sessionStorage for the Local Context instead of Cookie by default.
 - Cookie is now destroyed when browser is closed when the value of 'authexpired' key in a definition file is 0.
+- Divide the pagination codes to INTER-Mediator-Navi.js.
 - [BUG FIX] Fix compatibility when using INTERMediator.additionalCondition or INTERMediator.additionalSortKey.
   The affected version is 4.3 only (Thanks to Kentaro Suzuki).
 - [BUG FIX] Fix an error when the value of 'operator' is 'or' or 'and' in additionalCondition with FileMaker Server.
